--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "ng-zorro-antd": "^11.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
