--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bootstrap": "^5.0.1",
     "font-awesome": "^4.7.0",
     "ng-zorro-antd": "^11.4.1",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
