--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,13 @@
               }
             ],
             "styles": [
-              "./node_modules/font-awesome/css/font-awesome.css",
+
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/theme.less",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
