--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.1",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^11.4.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
