--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
+    "@angular/localize": "~11.2.14",
     "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "bootstrap": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.3.0",
     "ng-zorro-antd": "^11.4.1",
+    "ngx-socket-io": "^4.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
+    "socket.io": "^4.1.2",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
