--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.3.0",
     "ng-zorro-antd": "^11.4.1",
+    "ngx-pagination": "^5.1.0",
     "ngx-socket-io": "^4.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
