--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
-    "@angular/cdk": "^11.2.12",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
     "@angular/localize": "~11.2.14",
-    "@angular/material": "^11.2.12",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "^4.7.1",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
-    "bootstrap": "^5.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.3.1",
     "jwt-decode": "^3.1.2",
-    "mapbox-gl": "^2.3.0",
-    "ng-zorro-antd": "^11.4.1",
-    "ngx-pagination": "^5.1.0",
-    "ngx-socket-io": "^4.0.0",
+    "mapbox-gl": "^2.3.1",
+    "ng-zorro-antd": "^11.4.2",
+    "ngx-pagination": "^5.1.1",
+    "ngx-socket-io": "^4.1.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "socket.io": "^4.1.2",
     "toastr": "^2.1.4",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.13",
+    "@angular-devkit/build-angular": "^0.1102.14",
+    "@angular/cli": "^11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.16",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -59,6 +59,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "^4.1.6"
   }
 }
